<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animeDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <ImageButton
        android:id="@+id/animeDetailsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_back_button"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/animeDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineContentPosition">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/animeDetailsCardContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineInfoPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <TextView
                android:id="@+id/animeDetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/animeDetailsScoreContent"
                app:layout_constraintStart_toEndOf="@+id/animeDetailsPosterContent"
                app:layout_constraintTop_toTopOf="@+id/guidelineInfoPosition"
                tools:text="Título do Anime" />

            <androidx.cardview.widget.CardView
                android:id="@+id/animeDetailsScoreContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clipToPadding="false"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="24dp"
                app:cardMaxElevation="24dp"
                app:contentPadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsTitle">

                <TextView
                    android:id="@+id/animeDetailsScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLength="4"
                    android:text="@string/placeholder_score"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:text="0.00" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/animeDetailsEpisodes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/animeDetailsFans"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsTitle"
                app:layout_constraintTop_toBottomOf="@+id/animeDetailsTitle"
                tools:text="1000 episodes" />

            <TextView
                android:id="@+id/animeDetailsFans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsTitle"
                app:layout_constraintStart_toEndOf="@+id/animeDetailsEpisodes"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsEpisodes"
                tools:text="12345678 fans" />

            <TextView
                android:id="@+id/animeDetailsScoreLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsScoreContent"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsScoreContent"
                app:layout_constraintTop_toBottomOf="@+id/animeDetailsScoreContent" />

            <TextView
                android:id="@+id/animeDetailsDescription"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/animeDetailsAddButton"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsScoreLabel"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsPosterContent"
                app:layout_constraintTop_toBottomOf="@+id/animeDetailsPosterContent"
                tools:text="O Naruto pode ser um pouco duro às vezes, talvez você não saiba disso, mas o Naruto também cresceu sem pai. Na verdade ele nunca conheceu nenhum de seus pais, e nunca teve nenhum amigo em nossa aldeia. Mesmo assim eu nunca vi ele chorar, ficar zangado ou se dar por vencido, ele está sempre disposto a melhorar, ele quer ser respeitado, é o sonho dele e o Naruto daria a vida por isso sem hesitar. Meu palpite é que ele se cansou de chorar e decidiu fazer alguma coisa a respeito!" />

            <androidx.cardview.widget.CardView
                android:id="@+id/animeDetailsPosterContent"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:clipToPadding="false"
                app:cardCornerRadius="8dp"
                app:cardElevation="24dp"
                app:cardMaxElevation="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsTitle">

                <ImageView
                    android:id="@+id/animeDetailsPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_anime_cover"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/animeDetailsAddButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_outline_button"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/add_favs"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/animeDetailsShimmerTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:elevation="99dp"
                app:layout_constraintBottom_toBottomOf="@+id/animeDetailsTitle"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsTitle"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsTitle"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsTitle"
                app:shimmer_auto_start="true">

                <LinearLayout
                    android:id="@+id/animeDetailsShimmerTitleContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_placeholder_text_content" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/animeDetailsShimmerInfo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:elevation="99dp"
                app:layout_constraintBottom_toBottomOf="@+id/animeDetailsEpisodes"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsFans"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsEpisodes"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsEpisodes"
                app:shimmer_auto_start="true">

                <LinearLayout
                    android:id="@+id/animeDetailsShimmerInfoContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_placeholder_text_content" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/animeDetailsShimmerDesc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:elevation="99dp"
                app:layout_constraintBottom_toBottomOf="@+id/animeDetailsDescription"
                app:layout_constraintEnd_toEndOf="@+id/animeDetailsDescription"
                app:layout_constraintStart_toStartOf="@+id/animeDetailsDescription"
                app:layout_constraintTop_toTopOf="@+id/animeDetailsDescription"
                app:shimmer_auto_start="true">

                <LinearLayout
                    android:id="@+id/animeDetailsShimmerDescContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_placeholder_text" />

                    <include layout="@layout/item_placeholder_text" />

                    <include layout="@layout/item_placeholder_text" />

                    <include layout="@layout/item_placeholder_text" />

                    <include layout="@layout/item_placeholder_text" />

                    <include layout="@layout/item_placeholder_text_content" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineContentPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTrailerBottomPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.cardview.widget.CardView
        android:id="@+id/animeDetailsTrailerContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:clipToPadding="false"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp"
        app:cardMaxElevation="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTrailerBottomPosition"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animeDetailsBackButton">

        <WebView
            android:id="@+id/animeDetailsTrailer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>